# 3KO_Project

./: Del1_report.md  Pacemaker_Deliverable_1.slx  README.md  UART_INTEGRATION_HH.slx  project_UPDATE_NOV_21.slx  project_model.slx  project_model2020.slx  project_model_O10.slx  project_model_UPDATE.elf  project_model_UPDATE.hex  project_model_UPDATE.slx  sflib.slx  untitled.elf  untitled.hex  untitled.slx  untitled1.elf  untitled1.hex
DCM/: .gitignore  README.md  REQUIREMENTS.md  pyproject.toml  run.py
DCM/config/: app_config.json  colors.json  fonts.json  mode_parameters.json
DCM/data/: users.json
DCM/src/: config_loader.py  main.py  pacemaker_parameters.py  user_management.py
DCM/src/gui/: __init__.py  auth_screen.py  main_screen.py
DCM_group6/: README.md  pyproject.toml
DCM_group6/config/: app_config.json  colors.json  mode_parameters.json
DCM_group6/data/: device_state.json  users.json
DCM_group6/docs/: Deliverable1.md  Deliverable2.md  MicrontrolledShield.md  PACEMAKER.md
DCM_group6/src/: main.py
Simulink_group6/: Pacemaker_Deliverable_1.slx  Pacemaker_Deliverable_2.slx
project_model_UPDATE_ert_rtw/: MW_I2C.dep  MW_PWM.dep  MW_digitalIO.dep  buildInfo.mat  build_exception.mat  cmsis_rtos_init.dep  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  defines.txt  ert_main.c  ert_main.dep  ext_work.dep  hardware_init.dep  k64f_ext_svr.dep  k64f_rtiostream_interface.dep  k64f_rtiostream_utils.dep  modelsources.txt  multiword_types.h  mw_sdk_interface.dep  mw_semaphore.dep  mw_signal.dep  mw_thread.dep  mw_timer.dep  pin_mux.dep  (+30 more)
(+112 files in other folders)
