[project]
name = "pulse-point-dcm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[tool.ruff]
line-length = 120
lint.select = ["E", "F", "I", "B", "Q", "W", "D"]
lint.extend-ignore = ["D415", "D205"]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]

[dependency-groups]
dev = ["ruff>=0.13.1", "pre-commit>=4.3.0"]
